--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1573,6 +1573,14 @@ h2 {
   .work-icons {
     width: 400px;
   }
+
+  .profile-image {
+    height: 7000px;
+  }
+
+  .about-me-text-one {
+    margin-top: 90px;
+  }
 }
 
 /* 4k screens */
@@ -1944,13 +1952,16 @@ h2 {
     background-color: #1725df;
     margin-top: 100px;
   }
-.about-me-text-one{
-  margin-top: 180px;
-}
-.about-me-text-two{
-  font-size: 0.3em;
 
-}
+  .about-me-text-one {
+    margin-top: 180px;
+  }
+
+  .about-me-text-two {
+    font-size: 0.3em;
+
+  }
+
   .blinking-cursor {
     font-size: 50px;
   }
@@ -1972,7 +1983,7 @@ h2 {
 
   /* last page */
   .timeline {
-    margin-top:120px;
+    margin-top: 120px;
     transform: scale(0.6);
   }
 
